--- a/src/styles/sections/_footer.scss
+++ b/src/styles/sections/_footer.scss
@@ -2,30 +2,22 @@
   padding-bottom: 3.5rem;
   position: relative;
   z-index: 1;
-  // opacity: 0;
-  overflow: hidden;
+  width: 100%;
+  // overflow: hidden;
   @include sp {
     padding-bottom: 0.5rem;
-  }
-  &__inner {
-    opacity: 0;
   }
   &::after {
     content: '';
     position: absolute;
-    top: 12.7rem;
+    bottom: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 39.5rem;
     background: $yellow;
     z-index: -1;
-    transform-origin: top left;
-    transform: scaleX(var(--progress));
-    transition: transform 0.3s ease 0.1s;
-    // transform: translateY(100%);
-    // animation: translateTop 2s $ease-out-expo forwards 0s;
     @include sp {
-      top: 13.5rem;
+      height: 19.5rem;
     }
   }
   &__bigLogo {
@@ -34,6 +26,11 @@
     @include sp {
       width: 100%;
       margin: 0;
+      overflow: hidden;
+      padding-bottom: 1rem;
+      img {
+        transform: scale(1.02);
+      }
     }
     span {
       font-weight: 600;
@@ -44,7 +41,7 @@
       @include sp {
         font-size: 1.8rem;
         text-align: center;
-        padding-bottom: 1.6rem;
+        padding-bottom: 0.8rem;
       }
     }
   }
@@ -54,7 +51,7 @@
     margin: -4.7rem 3.7rem 0 auto;
     @include sp {
       width: 17.6rem;
-      margin: 4.5rem auto 0;
+      margin: 2rem auto 0;
     }
   }
   &__copyright {
@@ -73,14 +70,78 @@
   }
 }
 
-.loaded .footer {
-  // animation: fadeIn 0.5s ease-out forwards;
-  // animation: fadeIn 1.5s ease-out forwards 3.5s;
-  &__inner {
-    animation: fadeIn 1.5s ease-out forwards 4s;
+// only for home page
+.homeFooterContainer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  transform-origin: bottom left;
+  overflow: hidden;
+  height: 100%;
+  display: flex;
+  align-items: flex-end;
+  &::before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: calc(50 * var(--vh));
+    background: $yellow;
+    z-index: -1;
+    transform-origin: top left;
+    transform: scaleX(var(--progress)) translateY(0);
+    transition: transform 0.5s ease-in-out 0.1s;
+  }
+  .footer {
+    padding-bottom: 2rem;
+    @include sp {
+      padding-bottom: 0.5rem;
+    }
+    &::after {
+      display: none;
+    }
+    &__inner {
+      opacity: 0;
+    }
+    &__bigLogo {
+      @include pc {
+        max-width: 150vh;
+      }
+    }
+    &__copyright {
+      display: none;
+    }
+  }
+}
+.started-from-home {
+  .homeFooterContainer::before {
+    transition: none;
+    animation: footer 3s cubic-bezier(0.25, 1, 0.5, 1) forwards 3.1s;
+    @include sp {
+      animation-name: footerSP;
+    }
+  }
+  .footer__inner {
+    animation: fadeIn 1s ease-in forwards 3.5s;
+  }
+}
+.started {
+  .footer__inner {
+    animation: fadeIn 1s ease-in forwards 0s;
+  }
+  .homeFooterContainer::before {
+    animation: footer 0.1s cubic-bezier(0.25, 1, 0.5, 1) forwards 0s;
+    @include sp {
+      animation-name: footerSP;
+    }
   }
 }
 
-.loaded.started .footer__inner {
-  animation-delay: 0.1s;
-}
+// .loaded .homeFooterContainer {
+//   .footer__inner {
+//     animation: fadeIn 1.5s ease-out forwards 4s;
+//   }
+//   // transform: scaleY(1);
+// }
