--- a/src/styles/sections/_header.scss
+++ b/src/styles/sections/_header.scss
@@ -4,7 +4,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  pointer-events: none;
+  pointer-events: auto;
   opacity: 0;
   &__inner {
     display: flex;
@@ -16,7 +16,6 @@
   &__logo {
     width: 21.3rem;
     margin: 2.3rem 0 0 3.2rem;
-    pointer-events: auto;
     position: relative;
     @include sp {
       width: 93%;
@@ -50,7 +49,6 @@
   &__contact {
     display: flex;
     padding: 1.9rem 3.5rem 0 0;
-    pointer-events: auto;
     height: fit-content;
     &__mail {
       font-size: 1.3rem;
@@ -63,6 +61,7 @@
       border-radius: 2rem;
       letter-spacing: 0.04em;
       transition: all 0.3s ease-in-out;
+      background-color: white;
       @include pc {
         &:hover {
           background-color: $yellow;
@@ -80,10 +79,16 @@
     }
   }
 }
-.loaded .header {
-  animation: fadeIn 1.5s ease-out forwards 4s;
+
+.started-from-home {
+  .header,
+  .menu__button {
+    animation: fadeIn 1s ease-in forwards 3.5s;
+  }
 }
-.pageWrapper .header,
-.started .header {
-  animation-delay: 0.1s;
+.started {
+  .header,
+  .menu__button {
+    animation: fadeIn 1s ease-in forwards 0s;
+  }
 }
